--- a/mcs/ChangeLog
+++ b/mcs/ChangeLog
@@ -1,3 +1,16 @@
+2008-02-19  Martin Baulig  <martin@ximian.com>
+
+	* class.cs
+	(IMethodData.EmitExtraSymbolInfo): New interface method.
+	(MethodData.Emit): Call method.EmitExtraSymbolInfo().
+	(MethodOrOperator.EmitExtraSymbolInfo): Implement this new
+	interface method here as an empty public virtual method.
+
+	* anonymous.cs
+	(AnonymousMethodMethod.ctor): Added `string real_name' argument.
+	(AnonymousMethodMethod.EmitExtraSymbolInfo): Override and call
+	CodeGen.SymbolWriter.SetRealMethodName().	
+
 2008-02-18  Martin Baulig  <martin@ximian.com>
 
 	* anonymous.cs
