2008-02-19  Martin Baulig  <martin@ximian.com>
	* README.terrania: Updated.


svn path=/branches/martin/debugger-terrania/; revision=96141

--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,5 +1,9 @@
 2008-02-19  Martin Baulig  <martin@ximian.com>
 
+	* README.terrania: Updated.
+
+2008-02-19  Martin Baulig  <martin@ximian.com>
+
 	* languages/TargetClassType.cs
 	(TargetClassType.IsCompilerGenerated): New public abstract property.
 
