2008-02-28  Martin Baulig  <martin@ximian.com>
	* frontend/ScriptingContext.cs
	(ScriptingContext.MonoObjectToString): Operate on
	`TargetStructObject' so we can also print generic instances.


svn path=/branches/martin/debugger-terrania/; revision=96872

--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-28  Martin Baulig  <martin@ximian.com>
+
+	* frontend/ScriptingContext.cs
+	(ScriptingContext.MonoObjectToString): Operate on
+	`TargetStructObject' so we can also print generic instances.
+
 2008-02-27  Martin Baulig  <martin@ximian.com>
 
 	* backend/MonoThreadManager.cs
