--- a/runtime/metadata/ChangeLog
+++ b/runtime/metadata/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-04  Martin Baulig  <martin@ximian.com>
+
+	* mono-debug.h (MONO_DEBUGGER_VERSION): Bump to 67.
+
 2008-02-27  Martin Baulig  <martin@ximian.com>
 
 	* object.c (mono_runtime_exec_main): Call
