--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-10  Martin Baulig  <martin@ximian.com>
+
+	* MonoSymbolTable.cs
+	(CodeBlockEntry): Write as leb128 to save space.
+
 2008-02-19  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolFile.cs
