--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-11  Martin Baulig  <martin@ximian.com>
+
+	* MonoSymbolTable.cs
+	(CodeBlockEntry): Add an optional data size to allow support
+	future extensions.
+	(MethodEntry): Removed `LocalTypeIndices'.
+
 2008-03-10  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolTable.cs
