--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,12 @@
+2008-03-13  Martin Baulig  <martin@ximian.com>
+
+	* MonoSymbolTable.cs
+	(OffsetTable.Write): Add `version' argument; allow writing the old
+	file format.
+	(LocalVariableEntry): Add compatibility for the old file format.
+	(LexicalBlockEntry): Mark this as obsolete.
+	(MethodEntry): Add compatibility for the old file format.
+
 2008-03-11  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolTable.cs
