--- a/runtime/mini/ChangeLog
+++ b/runtime/mini/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-14  Martin Baulig  <martin@ximian.com>
+
+	**** This branch is now dead, please use SVN HEAD *****
+
 2008-03-04  Martin Baulig  <martin@ximian.com>
 
 	* debug-debugger.h (MonoDebuggerInfo): Added `get_method_signature.
