--- a/runtime/metadata/ChangeLog
+++ b/runtime/metadata/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-14  Martin Baulig  <martin@ximian.com>
+
+	**** This branch is now dead, please use SVN HEAD *****
+
 2008-03-10  Martin Baulig  <martin@ximian.com>
 
 	* debug-mono-symfile.h
