--- a/mcs/ChangeLog
+++ b/mcs/ChangeLog
@@ -1,3 +1,12 @@
+2008-03-14  Martin Baulig  <martin@ximian.com>
+
+	* symbolwriter.cs
+	(SymbolWriter): Make this a public static class.
+
+	* codegen.cs
+	(CodeGen.SymbolWriter): Removed; use the new static `SymbolWriter'
+	class instead of using `if (CodeGen.SymbolWriter != null)' everywhere.
+
 2008-02-19  Martin Baulig  <martin@ximian.com>
 
 	* class.cs
