--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-14  Martin Baulig  <martin@ximian.com>
+
+	**** This branch is now dead, please use SVN HEAD ****
+
 2008-03-13  Martin Baulig  <martin@ximian.com>
 
 	Fix #324557.
