--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-03-14  Martin Baulig  <martin@ximian.com>
 
+	* classes/DebuggerConfiguration.cs: Don't use XmlValidatingReader.
+	* classes/DebuggerSession.cs: Don't use XmlValidatingReader.
+
+2008-03-14  Martin Baulig  <martin@ximian.com>
+
 	* languages/mono/MonoSymbolFile.cs
 	(MonoSymbolFile): Make sure it's the correct file format.
 
