--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-15  Martin Baulig  <martin@ximian.com>
+
+	* NEWS: Updated to 0.80.
+
 2008-03-14  Martin Baulig  <martin@ximian.com>
 
 	* classes/DebuggerConfiguration.cs: Don't use XmlValidatingReader.
