2008-03-15  Martin Baulig  <martin@ximian.com>
	Released version 0.80 "Terrania City" of the Mono Debugger :-)


svn path=/trunk/debugger/; revision=98370

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2008-03-15  Martin Baulig  <martin@ximian.com>
 
+	Released version 0.80 "Terrania City" of the Mono Debugger :-)
+
 	* NEWS: Updated to 0.80.
 
 2008-03-14  Martin Baulig  <martin@ximian.com>
