--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-24  Wade Berrier  <wberrier@novell.com>
+
+	* Makefile.am:
+	* doc/Makefile.am:
+	Fix EXTRA_DIST (missing files) to fix build
+
 2008-03-15  Martin Baulig  <martin@ximian.com>
 
 	Released version 0.80 "Terrania City" of the Mono Debugger :-)
