--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-23  Martin Baulig  <martin@ximian.com>
+
+	* build/runtests.in: Use `--debug=mdb-optimizations' so we can
+	better attach to the process or examine core files.
+
 2008-04-22  Martin Baulig  <martin@ximian.com>
 
 	Fix an API bug: target output is always per process.
