--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-23  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Command.cs
+	(ShowCommand.ShowSourcesCommand): Fix #345172.
+
+2008-04-23  Martin Baulig  <martin@ximian.com>
+
 	* build/runtests.in: Use `--debug=mdb-optimizations' so we can
 	better attach to the process or examine core files.
 
