--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-23  Martin Baulig  <martin@ximian.com>
 
+	* test/testsuite/NUnit.cs
+	(TestSuite.Verbose): Set to false.
+
+2008-04-23  Martin Baulig  <martin@ximian.com>
+
 	* frontend/Command.cs
 	(ShowCommand.ShowSourcesCommand): Fix #345172.
 
