--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-24  Martin Baulig  <martin@ximian.com>
+
+	* test/testsuite/TestManagedTypes.cs: Add some testcases to parse
+	all kinds of crazy numbers.
+
 2008-04-23  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/NUnit.cs
