--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-29  Martin Baulig  <martin@ximian.com>
+
+	**** Kahalo changes start here ****
+
 2008-04-02  Martin Baulig  <martin@ximian.com>
 
 	* *.cs: Remove the `#if !DISABLE_TERRANIA_CHANGES' conditionals.
